--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="Financial Planning, Investment Management, Wealth Growth, Retirement Security, Budgeting">
     <title>Comprehensive Financial Planning Services</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://micolionheart.github.io/sd-loan-and-leasing13/">
+    <meta name="google-site-verification" content="KlL2gyJN5mAKYcYM6R7sgz-2SVxvl3d0-GEf2olO_aw" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2DX0PY145Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2DX0PY145Z');
+</script>
 </head>
 <body>
     <header>
